--- a/server/index.html
+++ b/server/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Teamwork Project</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div id="app"></div>
+    <script src="bundle.js"></script>
 </body>
 </html>
